Add common base class for MagnetURI and TorrentFile

--- a/src/base/CMakeLists.txt
+++ b/src/base/CMakeLists.txt
@@ -37,6 +37,7 @@ add_library(qbt_base STATIC
     bittorrent/torrentcontenthandler.h
     bittorrent/torrentcontentlayout.h
     bittorrent/torrentcreatorthread.h
+    bittorrent/torrentdescriptor.h
     bittorrent/torrentfile.h
     bittorrent/torrentimpl.h
     bittorrent/torrentinfo.h
