Simplify profile handling

--- a/src/base/CMakeLists.txt
+++ b/src/base/CMakeLists.txt
@@ -99,6 +99,7 @@ add_library(qbt_base STATIC
     utils/io.h
     utils/misc.h
     utils/net.h
+    utils/os.h
     utils/password.h
     utils/random.h
     utils/string.h
@@ -185,6 +186,7 @@ add_library(qbt_base STATIC
     utils/io.cpp
     utils/misc.cpp
     utils/net.cpp
+    utils/os.cpp
     utils/password.cpp
     utils/random.cpp
     utils/string.cpp
