--- a/src/base/3rdparty/luabridge/CMakeLists.txt
+++ b/src/base/3rdparty/luabridge/CMakeLists.txt
@@ -1,14 +1,14 @@
 add_library(qbt_luabridge INTERFACE)
 
 set(LUABRIDGE_HEADERS
+    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/Array.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/Dump.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/List.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/LuaBridge.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/Map.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/RefCountedObject.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/RefCountedPtr.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/Set.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/UnorderedMap.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/Vector.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/Array.h
 )
 
 source_group("LuaBridge" FILES ${LUABRIDGE_HEADERS})
@@ -17,16 +17,23 @@ set(LUABRIDGE_DETAIL_HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/CFunctions.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/ClassInfo.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/Config.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/Constructor.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/dump.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/Enum.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/Errors.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/Expected.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/FlagSet.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/FuncTraits.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/Globals.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/Invoke.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/Iterator.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/LuaException.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/LuaHelpers.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/LuaRef.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/Namespace.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/Options.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/Overload.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/Result.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/ScopeGuard.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/Stack.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/TypeList.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/TypeTraits.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LuaBridge/detail/Userdata.h
 )
